--- a/report/kf.tex
+++ b/report/kf.tex
@@ -1,4 +1,4 @@
-\section{Introduction}
+
 \subsection*{Sensor theory}
 Sensor fusion can be observed everywhere e.g., living animals uses all of its senses to survive daily, an animal cannot hunt using its eyes only, it has to combine its sense of smell, eyes, and hearing to hunt the pray\cite{animal}. Sensor fusion theory is not only found in the living species it is found in cars, planes, computers and so on and this to enhance performance and accuracy \cite{animal}. In this project a sensor fusion will be designed to enhance the accuracy of the dinghy's position and velocity. The fusion will be between a global positioning system, GPS and an Inertial Navigation System, INS. The INS contains on a low priced, Inertial Measurement Unit, IMU.\\ 
 The GPS's accuracy is not uniform since there might be building reflections, atmospherics delays or clock bias errors \cite{boken}. Using the only information provided by an SINS is not sufficient either since the IMU sensor will drift after time, but using the information provided by the INS for short time intervals will give more accurate results.  
@@ -655,7 +655,7 @@ v_n(t_k(GPS) = v_n(t_{imu}(k)) + \frac{v_n(t_{imu}(k+1))-v_n(t_{imu}(k))}{t_{imu
 The data provided by the Inertial Navigation System is working better than just using the raw GPS data, in some occasions. If the goal is to estimate the position, then it's better to use the INS connected to a Kalman Filter, this can be seen in Fig. \ref{Fig:result_kalman}. As seen, the Filtered data is inaccurate in the beginning but after some time converges to the true value, true value as in the case of wanted value, and at some points even catches the wanted value. In comparison to the raw GPS data, the INS is a better estimator for the user's position.
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.5\textwidth]{Figures/result.eps}
+\includegraphics[width=0.5\textwidth]{result.eps}
 \caption{True VS. Filtered and raw GPS data.}
 \label{Fig:result_kalman}
 \end{figure}
@@ -663,7 +663,7 @@ The data provided by the Inertial Navigation System is working better than just 
 Inspecting the Mean Squared Error, MSE for the position in $XY$ pane in Fig \ref{Fig:mse} for both INS and raw GPS data we can see that the error is lower for the INS data. 
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.5\textwidth]{Figures/mse.eps}
+\includegraphics[width=0.5\textwidth]{mse.eps}
 \caption{Mean Squared Error}
 \label{Fig:mse}
 \end{figure}
@@ -671,7 +671,7 @@ Inspecting the Mean Squared Error, MSE for the position in $XY$ pane in Fig \ref
 When estimating the height, i.e. $Z$-direction the result is poor for the INS, the estimated value from the INS is diverging from the true value, this can be seen in Fig. \ref{Fig:Height}. In this case, the GPS data is more accurate. 
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.5\textwidth]{Figures/Height.eps}
+\includegraphics[width=0.5\textwidth]{Height.eps}
 \caption{Height. True VS. Filtered and raw GPS data.}
 \label{Fig:Height}
 \end{figure}
@@ -679,7 +679,7 @@ The velocities in the $XY$ plane does not represent the true system in a good ma
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.5\textwidth]{Figures/velocity.eps}
+\includegraphics[width=0.5\textwidth]{velocity.eps}
 \caption{The velocities in $XY$ plane.}
 \label{Fig:velocity}
 \end{figure}
@@ -713,7 +713,4 @@ A more advanced interpolation technique between IMU data and GPS data, here refe
 
 One should also try different types of control methods to see if one can achieve more accurate results or not, e.g. feed-forward method.\\
 Weighted parameters if one believes the INS more than the GPS or vice-versa, this question arises when e.g. the GPS is connected to many/few satellites or if the user is having a large/small velocity or sensor anomalies. \\ \\
-
-
-
 
